# misentimiento

./: .gitignore  README.md  load_dataset_test.py  pyproject.toml  requirements.txt  test.py  train.py
.dvc/: config
configs/: config.yaml
configs/callbacks/: checkpoints.yaml
configs/datamodule/: hf_datamodule.yaml
configs/experiment/: bert_mnli.yaml
configs/model/: robertuito-base-uncased.yaml
configs/trainer/: default.yaml
data/: .gitignore  sentiment-analysis-gpt.dvc
src/: train.py
src/datamodules/: hf_datamodule.py
src/models/: hf_model.py
