[tool.poetry]
name = "misentimiento"
version = "0.1.0"
description = "Sentiment analysis in spanish"
authors = ["David Ayala <deayalar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
lightning = "^2.0.5"
torchmetrics = "^1.0.1"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
transformers = "^4.31.0"
datasets = "^2.13.1"
pre-commit = "^3.3.3"
python-dotenv = "^1.0.0"
rich = "^13.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
